# dual_arm_teleoperation

./: .gitignore  Dockerfile  LICENSE  docker_build.sh  docker_run.sh  install.sh  readme.md
dual_arm_panda_moveit_config/config/: moveit_controllers.yaml  ompl_planning.yaml  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml
dual_arm_panda_moveit_config/launch/: moveit.rviz
hand_tracker/: CMakeLists.txt  package.xml
hand_tracker/hand_tracker/: camera.py  hand_detector.py  prova.py  utils.py
hand_tracker/launch/: camera.launch.py  hand_tracker.launch.py
hand_tracker/msg/: HandTrack.msg
hand_tracker/scripts/: camera_node.py  hand_tracker_node.py  hand_tracker_node_debug.py
robot_teleoperation/: CMakeLists.txt  package.xml
robot_teleoperation/config/: left_panda_simulated_config.yaml  right_panda_simulated_config.yaml  teleoperation_config.yaml
robot_teleoperation/launch/: dual_servo_arm.launch.py  minimal_dual_servo_arm.launch.py  servo_example.launch.py  teleoperation.launch.py
robot_teleoperation/robot_teleoperation_lib/: gripper.py  moveit_client.py  twist_smoother.py
robot_teleoperation/scripts/: rviz_target_generator.py  teleoperation_fsm.py
robot_teleoperation/src/: left_keyboard_input.cpp
